src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__oid__cast_oid_to_reg_proc__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/oid.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: RegProc,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: RegProc,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastRegProcToOid(
            CastRegProcToOid,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
